--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,6 +1,6 @@
 * {
     font-family: 'Roboto', sans-serif;
-
+    box-sizing: border-box;
 }
 
 body {
@@ -9,11 +9,9 @@ body {
 
 .content {
     width: 100vw;
-    padding: 1rem;
-    background-color: white;
     height: 100vh;
-    
-
+    padding: 1rem;
+    background-color: #fff;
 }
 
 @media screen and (min-width: 992px) {
@@ -23,9 +21,4 @@ body {
         margin: 1rem auto;
         border-radius: 1rem;
     }
-  }
-
-.content h1 {
-    margin: 0;
 }
-
